[project]
name = "sparky"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dotenv>=0.9.9",
    "fastapi[standard]>=0.116.1",
    "openai>=1.93.1",
    "openai-agents>=0.1.0",
    "pandas>=2.3.0",
    "pydantic>=2.11.7",
    "pymongo>=4.13.2",
    "requests>=2.32.4",
    "uvicorn>=0.35.0",
]
